# safe_store

./: .gitignore  CHANGELOG.md  DOC.md  README.md  graph_example_store.db  plan.md  pyproject.toml  requirements.txt  setup.py  todo.md
docs/: api.rst  conf.py  encryption.rst  graph_store.rst  index.rst  installation.rst  logging.rst  quickstart.rst  requirements.txt
examples/: basic_usage.py  basic_usage_text.py  benchmark.py  custom_logging.py  dynamic_model_selection.py  encryption_usage.py  graph_usage.py  metadata_generation.py  new york.txt  point_cloud_and_api.py  requirements.txt  space.txt  test_long_text_corpus.py
examples/SafeStoreGraph/: .gitignore  description.yaml  index.html  requirements.txt  server.py
examples/lollms_with_data/: README.md  test_long_text_corpus.py
examples/test_database/: llm.txt
examples/view and search from db/: test_long_text_corpus.py  test_long_text_corpus_with_save.py
examples/view and search from db/raw_database/: submarines.txt
point_cloud_web_app/: data.json  index.html
safe_store/: BM25Vectorizer.py  __init__.py  document_decomposer.py  generic_data_loader.py  store.py  text_vectorizer.py  tf_idf_vectorizer.py  tfidf_loader.py  utils.py
safe_store/core/: db.py  exceptions.py
safe_store/graph/: __init__.py  graph_store.py
safe_store/graph/prompts/: entity_fusion_prompt.md  graph_extraction_prompt.md  graph_extraction_prompt_with_ontology.md  query_parsing_prompt.md
safe_store/indexing/: chunking.py  page_index.py  parser.py
safe_store/processing/: text_cleaning.py  tokenizers.py
safe_store/search/: similarity.py
safe_store/security/: encryption.py
safe_store/utils/: json_parsing.py
safe_store/vectorization/: base.py  manager.py  utils.py
safe_store/vectorization/methods/: cohere.py  lollms.py  lollms_chat.py  ollama.py  openai.py  sentence_transformer.py  st.py  tfidf.py
safe_store/vectorization/methods/cohere/: __init__.py  description.yaml
safe_store/vectorization/methods/lollms/: __init__.py  description.yaml
safe_store/vectorization/methods/ollama/: __init__.py  description.yaml
safe_store/vectorization/methods/openai/: __init__.py  description.yaml
safe_store/vectorization/methods/sentense_transformer/: __init__.py  description.yaml
safe_store/vectorization/methods/tf_idf/: __init__.py  description.yaml
safe_store/webui/: .gitignore  config_manager.py  example.config.toml  main.py
safe_store/webui/static/: index.html
safe_store/webui/static_assets/: script.js  style.css
safestore/: __init__.py  store.py
safestore/core/: db.py  exceptions.py
safestore/indexing/: chunking.py  parser.py
safestore/search/: similarity.py
safestore/vectorization/: base.py  manager.py
safestore/vectorization/methods/: sentence_transformer.py  tfidf.py
scripts/: migration_v1_v2.py
temp_docs_basic/: intro.txt  update_later.txt  web_snippet.html
temp_docs_graph_example/: company_info.txt  research_paper_snippet.txt
temp_docs_point_cloud/: animals.txt  space.txt  tech.txt
tests/: conftest.py  test_chunking.py  test_store_encryption.py  test_store_phase1.py  test_store_phase2.py  test_store_phase3.py  test_store_phase4.py
tests/fixtures/: sample.docx  sample.html
tests/security/: __init__.py  test_encryption.py
webui/: .gitignore  config_manager.py  example.config.toml  main.py
webui/static/: index.html
webui/static_assets/: script.js  style.css
