# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-store"
# Bump version for this release
version = "1.6.0"
description = "Simple, concurrent SQLite-based vector store optimized for local RAG pipelines, with optional encryption."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "ParisNeo", email = "parisneo_ai@gmail.com" },
]
keywords = ["vector", "database", "sqlite", "rag", "llm", "embedding", "semantic search", "local", "concurrent", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta", # Or "5 - Production/Stable" if ready
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Security :: Cryptography", # Added classifier
]
# Core dependencies
dependencies = [
    "numpy>=1.21",
    "ascii_colors>=0.7.0", # For logging/console output
    "filelock>=3.9",       # For concurrency control
]

[project.optional-dependencies]
# --- Parsing Libraries ---
parsing = [
    "pypdf>=3.10",
    "python-docx>=1.0",
    "beautifulsoup4>=4.11",
    "lxml>=4.9", # Recommended HTML parser
]

# --- Vectorizer Libraries ---
sentence-transformers = ["sentence-transformers>=2.2.0"]
tfidf = ["scikit-learn>=1.0"]
# Future vectorizers can be added here:
# openai = ["openai>=1.0"]
# ollama = ["ollama"]

# --- Encryption Library ---
encryption = ["cryptography>=40.0"] # Added Encryption

# --- Combined Extras ---
all-vectorizers = [
    "safe_store[sentence-transformers]",
    "safe_store[tfidf]",
]
# Combined extra for everything (parsing, all vectorizers, encryption)
all = [
    "safe_store[parsing]",
    "safe_store[all-vectorizers]",
    "safe_store[encryption]", # Added Encryption to 'all'
]
# Extra for development dependencies (testing, linting, building, docs)
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "flake8>=5.0",     # Or ruff
    "black>=22.0",
    "mypy>=0.9",
    "types-filelock",
    "types-cryptography", # Added types for cryptography
    # Documentation tools
    "Sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "lxml", # Needed again for docutils used by sphinx if not already installed
    # Build tools
    "hatchling",
    "wheel",
    "twine", # For checking/uploading packages
]

[project.urls]
Homepage = "https://github.com/ParisNeo/safe_store"
Repository = "https://github.com/ParisNeo/safe_store"
Documentation = "https://github.com/ParisNeo/safe_store#readme" # Link to README initially, update later if dedicated docs site exists
Issues = "https://github.com/ParisNeo/safe_store/issues"

# --- Tool Configurations ---
[tool.black]
line-length = 88
target-version = ['py38']

[tool.hatch.version]
path = "safe_store/__init__.py"