[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-store"
version = "3.4.2"
description = "Simple, concurrent SQLite-based vector store optimized for local RAG pipelines, with optional encryption."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "ParisNeo", email = "parisneo_ai@gmail.com" },
]
keywords = ["vector", "database", "sqlite", "rag", "llm", "embedding", "semantic search", "local", "concurrent", "encryption", "webui"]
classifiers = [
    "Development Status :: 5 - Production/Stable", # Or "5 - Production/Stable" if ready
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Security :: Cryptography", # Added classifier
]
# Core dependencies
dependencies = [
    "pipmaster>=1.0.8",
    "numpy>=1.21",
    "ascii_colors>=0.11.6", # For logging/console output
    "filelock>=3.9",       # For concurrency control
    "sqlalchemy",
    "tiktoken",
    # Parsing Libraries
    "pypdf>=3.10",
    "python-docx>=1.0",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    # Vectorizer Libraries
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.0",
    "openai>=1.0",
    "ollama",
    "cohere",
    # Security/Encryption
    "cryptography>=40.0",
    "bcrypt>=4.0.0"
]

[project.optional-dependencies]
# Extra for development dependencies (testing, linting, building, docs)
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "flake8>=5.0",     # Or ruff
    "black>=22.0",
    "mypy>=0.9",
    "types-filelock",
    "types-cryptography", # Added types for cryptography
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "flake8>=5.0",     # Or ruff
    "black>=22.0",
    "mypy>=0.9",
    "types-filelock",
    "types-cryptography", # Added types for cryptography
    # Documentation tools
    "Sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "lxml", # Needed again for docutils used by sphinx if not already installed
    # Build tools
    "hatchling",
    "wheel",
    "twine", # For checking/uploading packages
]

[project.urls]
Homepage = "https://github.com/ParisNeo/safe_store"
Repository = "https://github.com/ParisNeo/safe_store"
Documentation = "https://github.com/ParisNeo/safe_store#readme" # Link to README initially, update later if dedicated docs site exists
Issues = "https://github.com/ParisNeo/safe_store/issues"

# --- Tool Configurations ---
[tool.black]
line-length = 88
target-version = ['py38']

[tool.hatch.version]
path = "safe_store/__init__.py"

[tool.hatch.build]
include = [
  "safe_store"
]
